[workspace]
resolver = "2"
members = [
    "packages/*",
    "contracts/factory",
    "contracts/pair",
    "contracts/pair_stable",
    "contracts/pair_concentrated",
    "contracts/pair_astro_converter",
    "contracts/pair_transmuter",
    #  "contracts/pair_concentrated_inj", TODO: rewrite OB liquidity deployment
    #  "contracts/pair_astro_xastro", # unused
    "contracts/pair_xyk_sale_tax",
    "contracts/router",
    "contracts/token",
    "contracts/whitelist",
    "templates/*",
    "contracts/tokenomics/*",
    "contracts/periphery/fee_granter",
    "contracts/periphery/native_coin_registry",
    "contracts/periphery/oracle"
]

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
strip = true


[patch.'https://github.com/astroport-fi/hidden_astroport_core']
astroport = { path = "packages/astroport" }

[patch.'https://github.com/astroport-fi/astroport-core']
astroport = { path = "packages/astroport" }
