[workspace]
resolver = "2"
members = [
    "packages/*",
    "contracts/factory",
    "contracts/pair",
    "contracts/pair_stable",
    "contracts/pair_concentrated",
    "contracts/pair_astro_converter",
    "contracts/pair_transmuter",
    "contracts/pair_concentrated_duality",
    "contracts/pair_concentrated_sale_tax",
    "contracts/pair_xastro",
    "contracts/pair_supervault_adapter",
    "contracts/pair_xyk_sale_tax",
    "contracts/router",
    "contracts/whitelist",
    "contracts/tokenomics/*",
    "contracts/periphery/*"
]

[workspace.dependencies]
cosmwasm-std = "1.5"
cw-storage-plus = { version = "1.2", features = ["macro"] }
cw2 = "1"
thiserror = "1.0"
itertools = "0.12"
cosmwasm-schema = "1.5"
cw-utils = "1"
astroport = { path = "./packages/astroport", version = "5.11.0" }

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
strip = true

[patch.'https://github.com/astroport-fi/astroport-core']
astroport = { path = "packages/astroport" }

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin_include)"] }
