[package]
name = "astroport-cw20-ics20"
version = "1.1.1"
authors = ["Astroport", "Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2021"
description = "IBC Enabled contracts that receives CW20 tokens and sends them over ICS20 to a remote chain with additional memo handling"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cosmwasm-schema = { version = "1.1.0" }
cw-utils = "1.0.1"
cw2 = "1.1.0"
cw20 = "1.1.0"
cosmwasm-std = { version = "1.1.0", features = ["stargate"] }
cw-storage-plus = "1.0.1"
cw-controllers = "1.1.0"
schemars = "0.8.1"
semver = "1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

astroport = { path = "../../packages/astroport", version = "3" }

[dev-dependencies]
cw20-ics20-original = { version = "0.13.4", package = "cw20-ics20" }
