[package]
name = "astroport-factory"
version = "1.7.0"
authors = ["Astroport"]
edition = "2021"
description = "Astroport factory contract - pair contract generator and directory"
license = "GPL-3.0-only"
repository = "https://github.com/astroport-fi/astroport"
homepage = "https://astroport.fi"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { version = "1.1", features = ["stargate"] }
astroport = { path = "../../packages/astroport", version = "3.10" }
cw-storage-plus = "0.15"
cw2 = "0.15"
thiserror = "1.0"
protobuf = { version = "2", features = ["with-bytes"] }
itertools = "0.10"
cosmwasm-schema = "1.1"
cw-utils = "1.0.1"

[dev-dependencies]
astroport-test = { path = "../../packages/astroport_test" }
astroport-token = { path = "../token" }
astroport-pair = { path = "../pair" }
cw20 = "0.15"
anyhow = "1.0"
prost = "0.11.5"
