[package]
name = "astroport-pair"
version = "1.0.0"
authors = ["Astroport"]
edition = "2018"
description = "An Astroport pair contract"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces", "cosmwasm-vm/backtraces"]

[dependencies]
integer-sqrt = "0.1.5"
astroport = { path = "../../packages/astroport", default-features = false }
cw2 = "0.15"
cw20 = "0.15"
cosmwasm-std = "1.1"
cw-storage-plus = "0.15"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
protobuf = { version = "2", features = ["with-bytes"] }

[dev-dependencies]
cosmwasm-vm = { version = "1.1" }
cosmwasm-schema = "1.1"
classic-bindings = "0.1.1"
astroport-token = {path = "../token"}
cw-multi-test = "0.15"
astroport-factory = {path = "../factory"}
proptest = "1.0"
