[package]
name = "astroport-pair"
version = "1.5.1"
authors = ["Astroport"]
edition = "2021"
description = "The Astroport constant product pool contract implementation"
license = "GPL-3.0-only"
repository = "https://github.com/astroport-fi/astroport"
homepage = "https://astroport.fi"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
integer-sqrt = "0.1"
astroport = { path = "../../packages/astroport", version = "4" }
cw2.workspace = true
cw20 = "1.1"
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
thiserror.workspace = true
cosmwasm-schema.workspace = true
cw-utils.workspace = true

[dev-dependencies]
cw20-base = { version = "1.1", features = ["library"] }
astroport-factory = { path = "../factory" }
proptest = "1.0"
prost = "0.11.5"
astroport-mocks = { path = "../../packages/astroport_mocks" }
