[package]
name = "astroport-pair-converter"
version = "1.0.0"
authors = ["Astroport"]
edition = "2021"
description = "Astroport old cw20 ASTRO -> new tf ASTRO converter virtual pair"
license = "GPL-3"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
astroport = { path = "../../packages/astroport", version = "5" }
cw2.workspace = true
cw20 = "1.1"
cosmwasm-std = { workspace = true, features = ["cosmwasm_1_1", "stargate"]}
cw-storage-plus.workspace = true
thiserror.workspace = true
cosmwasm-schema.workspace = true
cw-utils.workspace = true
serde = { version = "1.0.193", features = ["derive"] }

[dev-dependencies]
anyhow = "1"
derivative = "2.2"
itertools.workspace = true
cw-multi-test = "0.20.0"
cw20-base = "1.1"
astroport-factory = { path = "../factory" }
astroport-pair = "~1.3.3"
astro-token-converter = { path = "../periphery/astro_converter", version = "1.0" }
