[package]
name = "astroport-pair-converter"
version = "1.1.0"
authors = ["Astroport"]
edition = "2021"
description = "Astroport old cw20 ASTRO -> new tf ASTRO converter virtual pair"
license = "GPL-3.0-only"
repository = "https://github.com/astroport-fi/astroport"
homepage = "https://astroport.fi"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
astroport.workspace = true
cw2.workspace = true
cw20 = "1.1"
cosmwasm-std = { workspace = true, features = ["cosmwasm_1_1", "stargate"] }
cw-storage-plus.workspace = true
thiserror.workspace = true
cosmwasm-schema.workspace = true
serde = { version = "1.0.193", features = ["derive"] }

[dev-dependencies]
anyhow = "1"
derivative = "2.2"
itertools.workspace = true
astroport-test = { path = "../../packages/astroport_test" }
cw20-base = "1.1"
astroport-factory = { path = "../factory", version = "2.0" }
astroport-pair = { path = "../pair", version = "2.2.0" }
astro-token-converter = { path = "../periphery/astro_converter", version = "1.0" }
