[package]
name = "astroport-pair-astro-xastro"
version = "1.0.1"
authors = ["Astroport"]
edition = "2021"
description = "The Astroport ASTRO-xASTRO pair contract implementation"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
astroport = { path = "../../packages/astroport", default-features = false }
astroport-pair-bonded = { path = "../../packages/pair_bonded" }
cw2 = { version = "0.15" }
cw20 = { version = "0.15" }
cosmwasm-std = { version = "1.1" }
cw-storage-plus = "0.15"
thiserror = { version = "1.0" }
cosmwasm-schema = "1.1"

[dev-dependencies]
astroport-token = {path = "../token"}
astroport-factory = {path = "../factory"}
cw-multi-test = "0.15"
astroport-staking = {path = "../tokenomics/staking"}
astroport-xastro-token = {path = "../tokenomics/xastro_token"}
