[package]
name = "astroport-pair-concentrated"
version = "1.0.0"
authors = ["Astroport"]
edition = "2021"
description = "The Astroport concentrated liquidity pair"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
astroport = { path = "../../packages/astroport", default-features = false }
cw2 = { version = "0.13" }
cw20 = { version = "0.13" }
cosmwasm-std = { version = "1.0" }
cw-storage-plus = {version = "0.13"}
cw-utils = "0.13.4"
schemars = "0.8"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }
itertools = "0.10"

[dev-dependencies]
anyhow = "1.0"
cosmwasm-schema = "1.0.0"
terra-cosmwasm = { version = "2.2.0" }
proptest = "1"
sim = { git = "https://github.com/astroport-fi/astroport-sims.git", branch = "feat/conc_liq_simulator", package = "concentrated_swap_sim" }
astroport-token = {path = "../token"}
cw-multi-test = "0.13"
astroport-factory = {path = "../factory"}
derivative = "0.3"
