[package]
name = "astroport-pair-lido"
version = "1.0.0"
authors = ["Astroport"]
edition = "2021"
description = "A Proxy Lido Contract for Astroport Liquidity Pools - to swap stLuna and bLuna in the Astroport pools way"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw2 = { version = "0.8" }
cw20 = { version = "0.8.0" }
cosmwasm-std = { version = "0.16.0", features = ["iterator"] }
cosmwasm-storage = { version = "0.16.0", features = ["iterator"] }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
astroport = { path = "../../packages/astroport", default-features = false}
basset = { git = "https://github.com/lidofinance/lido-terra-contracts" }
thiserror = { version = "1.0.20" }
cw-storage-plus = {version = "0.8.0"}
cosmwasm-bignumber = "2.2.0"

[dev-dependencies]
cosmwasm-schema = "0.16.0"
