[package]
name = "astroport-pair-stable"
version = "3.5.0"
authors = ["Astroport"]
edition = "2021"
description = "The Astroport stableswap pair contract implementation"
license = "GPL-3.0-only"
repository = "https://github.com/astroport-fi/astroport"
homepage = "https://astroport.fi"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
astroport = { path = "../../packages/astroport", version = "4" }
cw2.workspace = true
cw20 = "1.1"
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
thiserror.workspace = true
itertools.workspace = true
cosmwasm-schema.workspace = true
cw-utils.workspace = true
astroport-circular-buffer = { path = "../../packages/circular_buffer", version = "0.2" }

[dev-dependencies]
anyhow = "1.0"
proptest = "1.0.0"
sim = { git = "https://github.com/astroport-fi/astroport-sims", branch = "main", package = "sim" }
cw20-base = "1.1"
astroport-factory = { path = "../factory" }
derivative = "2.2"
prost = "0.11.5"
astroport-native-coin-registry = { path = "../periphery/native_coin_registry" }
astroport-mocks = { path = "../../packages/astroport_mocks" }
