[package]
name = "astroport-pair-stable-bluna"
version = "1.0.2"
authors = ["Astroport"]
edition = "2021"
description = "The Astroport stableswap pair contract implementation specifically designed for a pair that contains bLUNA"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
integer-sqrt = "0.1.5"
astroport = { path = "../../packages/astroport", default-features = false }
cw2 = { version = "0.13" }
cw20 = { version = "0.13" }
cosmwasm-std = { version = "1.0" }
cw-storage-plus = {version = "0.13"}
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }
protobuf = { version = "2", features = ["with-bytes"] }
anchor-basset = {git = "https://github.com/Anchor-Protocol/anchor-bAsset-contracts.git", tag = "v0.2.1", package = "basset"}

[dev-dependencies]
proptest = "1.0.0"
sim = { git = "https://github.com/astroport-fi/astroport-sims.git", rev = "d617510737ee2c529d3aaa7afbdac5ccb5a385c9", package = "sim" }
cosmwasm-schema = "1.0.0"
astroport-token = {path = "../token"}
cw-multi-test = "0.13"
astroport-factory = {path = "../factory"}
astroport-whitelist = {path = "../whitelist"}
